@@ -1,0 +1,5 @@
+This is an ActiveRecord driver for MySQL using JDBC running under JRuby. Please see
+
+http://jruby-extras.rubyforge.org/activerecord-jdbc-adapter/
+
+for more information.
