@@ -1,0 +1,6 @@
+This is a Derby JDBC driver gem for JRuby. Use
+
+   require 'jdbc/derby'
+
+to make the driver accessible to JDBC and ActiveRecord code running in JRuby.
+
