@@ -1,0 +1,6 @@
+This is a HSQLDB JDBC driver gem for JRuby. Use
+
+   require 'jdbc/hsqldb'
+
+to make the driver accessible to JDBC and ActiveRecord code running in JRuby.
+
