@@ -1,0 +1,5 @@
+This is a Postgres JDBC driver gem for JRuby. Use
+
+   require 'jdbc/postgres'
+
+to make the driver accessible to JDBC and ActiveRecord code running in JRuby.
